crates/ars-collections/tests/ui/tab_key_nonliteral_value.stderr
error: TabKey variant key values must be literals
 --> tests/ui/tab_key_nonliteral_value.rs:7:15
  |
7 |     #[tab_key(int = PROFILE)]
  |               ^^^^^^^^^^^^^
